--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="InfraDev Meetup — митапы по инфраструктурной разработке">
     <meta property="og:description" content="Митапы по разработке и эксплуатации инфраструктурных платформ — от разработчиков для разработчиков">
-    <meta property="og:image" content="/img/3.jpg">
+    <meta property="og:image" content="/img/meetup/3.jpg">
     <meta property="og:url" content="https://infradevs.ru/">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="InfraDev Meetup — митапы по инфраструктурной разработке">
     <meta name="twitter:description" content="Митапы по разработке и эксплуатации инфраструктурных платформ — от разработчиков для разработчиков">
-    <meta name="twitter:image" content="/img/3.jpg">
+    <meta name="twitter:image" content="/img/meetup/3.jpg">
   </head>
   <body>
     <div id="root"></div>
